src/objects/CDA_Request__c.object
<CustomObject>
    <fields>
        <fullName>Recipient_Account_City_Other__c</fullName>
        <description>Recipient&apos;s City</description>
        <inlineHelpText>Provide the Recipient’s city of address.</inlineHelpText>
        <label>Recipient Account City Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account_Country_Other_PL__c</fullName>
        <description>Recipient&apos;s Country</description>
        <inlineHelpText>Provide the Recipient’s country of address.</inlineHelpText>
        <label>Recipient Account Country Other</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Account_Country_Other__c</fullName>
        <description>Recipient&apos;s Country</description>
        <inlineHelpText>Provide Country of address corresponding to the Recipient Account Name</inlineHelpText>
        <label>Recipient Account Country Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account_Name_Formula__c</fullName>
        <description>This is used for email template. Updated Label by Vikram Singh under CR-11817.</description>
        <formula>IF( OR(ISNULL(Recipient_Account__c),ISBLANK(Recipient_Account__c) ), Recipient_Account_Name_Other__c , Recipient_Account__r.CDA_Account_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Account Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account_Name_Other__c</fullName>
        <description>Updated by Vikram Singh under Issue-11774</description>
        <inlineHelpText>Provide the Recipient’s company name which will be the executing party to the CDA.</inlineHelpText>
        <label>Recipient Account Name Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account_State_Other_PL__c</fullName>
        <description>Recipient&apos;s State</description>
        <inlineHelpText>Provide the Recipient’s state or province of address.</inlineHelpText>
        <label>Recipient Account State Other</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Recipient_Account_Country_Other_PL__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abia</fullName>
                </value>
                <value>
                    <fullName>Abruzzit</fullName>
                </value>
                <value>
                    <fullName>Abyei Area</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Adamawa</fullName>
                </value>
                <value>
                    <fullName>Adrar</fullName>
                </value>
                <value>
                    <fullName>Afar Regional State</fullName>
                </value>
                <value>
                    <fullName>Agadez</fullName>
                </value>
                <value>
                    <fullName>Água Grande</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Ahafo Region</fullName>
                </value>
                <value>
                    <fullName>Ahal Region</fullName>
                </value>
                <value>
                    <fullName>Aichi</fullName>
                </value>
                <value>
                    <fullName>Aimeliik</fullName>
                </value>
                <value>
                    <fullName>Airai</fullName>
                </value>
                <value>
                    <fullName>Akita</fullName>
                </value>
                <value>
                    <fullName>Akwa Ibom</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Amapá</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>Amhara Regional State</fullName>
                </value>
                <value>
                    <fullName>Anambra</fullName>
                </value>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Andra Pradesh</fullName>
                    <isActive>false</isActive>
                    <label>Andra Pradesh</label>
                </value>
                <value>
                    <fullName>Angaur</fullName>
                </value>
                <value>
                    <fullName>Anhui</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Account_State_Other__c</fullName>
        <description>Recipient&apos;s State</description>
        <inlineHelpText>Provide State of address corresponding to the Recipient Account Name</inlineHelpText>
        <label>Recipient Account State Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account_Street_Other__c</fullName>
        <description>Recipient Account Address Street</description>
        <inlineHelpText>Provide the Recipient’s street address.</inlineHelpText>
        <label>Recipient Account Street Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account_ZipCode_Other__c</fullName>
        <description>Recipient&apos;s ZipCode</description>
        <inlineHelpText>Provide the Recipient’s zip or postal code of address.</inlineHelpText>
        <label>Recipient Account ZipCode Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Recipient’s company name which will be the executing party to the CDA.</inlineHelpText>
        <label>Recipient Account Name</label>
        <referenceTo>CDA_Account__c</referenceTo>
        <relationshipLabel>CDA Requests (Recipient Account Name)</relationshipLabel>
        <relationshipName>CDA_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Affiliates__c</fullName>
        <inlineHelpText>Identifies if the CDA covers all Recipient Affiliates. Checked indicates all are covered. </inlineHelpText>
        <label>Recipient Affiliates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Authorized_Signer_Email_Addres__c</fullName>
        <inlineHelpText>Email address for the Recipient&apos;s Authorized Signer</inlineHelpText>
        <label>Recipient Authorized Signer Email Addres</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Authorized_Signer_First_Name__c</fullName>
        <inlineHelpText>First name for the Recipient&apos;s Authorized Signer</inlineHelpText>
        <label>Recipient Authorized Signer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Authorized_Signer_Last_Name__c</fullName>
        <inlineHelpText>Last name for the Recipient&apos;s Authorized Signer</inlineHelpText>
        <label>Recipient Authorized Signer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Authorized_Signer_Preferred_Me__c</fullName>
        <label>Recipient Authorized Signer Preferred Me</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Authorized_Signer_Title__c</fullName>
        <inlineHelpText>Position title for the Recipient&apos;s Authorized Signer</inlineHelpText>
        <label>Recipient Authorized Signer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Execute_Confirmation_Email_Sub__c</fullName>
        <formula>Recipient_Account_Name_Formula__c &amp; &quot;- IQVIA Confidentiality Agreement(ID - &quot; &amp; CDA_Id__c &amp; &quot;) -&gt; Confidentiality Agreement between &quot; &amp; Recipient_Account_Name_Formula__c &amp; &quot; and &quot; &amp; QI_Legal_Entity_Name__r.Name &amp; &quot; has been fully executed.&quot;</formula>
        <label>Recipient Execute Confirmation Email Sub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Point_of_Contact_Email_Address__c</fullName>
        <inlineHelpText>Provide the email address for the Recipient’s contact person.</inlineHelpText>
        <label>Recipient Point of Contact Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Point_of_Contact_First_Name__c</fullName>
        <inlineHelpText>The contact person at Recipient company who will receive the CDA and related emails. Provide his/her first name.</inlineHelpText>
        <label>Recipient Point of Contact First  Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Point_of_Contact_Last_Name__c</fullName>
        <inlineHelpText>Provide the last name of the Recipient’s contact person.</inlineHelpText>
        <label>Recipient Point of Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Point_of_Contact_Name__c</fullName>
        <description>Full Name of Recipient Point of Contact</description>
        <formula>Recipient_Point_of_Contact_First_Name__c +&apos; &apos;+  Recipient_Point_of_Contact_Last_Name__c</formula>
        <label>Recipient Point of Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Point_of_Contact_Preferred_Met__c</fullName>
        <inlineHelpText>Recipient&apos;s point of contact preferred method of communication (if known)</inlineHelpText>
        <label>Recipient Point-of-Contact Preferred Met</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Point_of_Contact_Prefix__c</fullName>
        <label>Recipient Point-of-Contact Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Point_of_Contact_Telephone_Num__c</fullName>
        <inlineHelpText>Provide the telephone number for the Recipient’s contact person.</inlineHelpText>
        <label>Recipient Point of Contact Telephone Num</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recipient_Point_of_Contact_Title__c</fullName>
        <inlineHelpText>Provide the business title for the Recipient’s contact person such as “Manager” or “Sales Director”.</inlineHelpText>
        <label>Recipient Point of Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>created by Vikram Singh under CR-11733</description>
        <formula>RIGHT(TEXT(DAY(DATEVALUE(Status_Start_Date__c))+ 100), 2)+&quot;/&quot; +RIGHT(TEXT(MONTH(DATEVALUE(Status_Start_Date__c))+ 100), 2)+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Status_Start_Date__c)))</formula>
        <label>Request Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Admin_Email_Flag__c</fullName>
        <description>Created by Vikram Singh under CR-11764</description>
        <label>Requestor Admin Email Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_Carbon_Copies__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>You will be carbon copied on all emails to the Recipient unless you remove the checkmark from the box.</inlineHelpText>
        <label>Requestor Carbon Copies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor_Reply_Response__c</fullName>
        <description>When CDA Negotiator send requestor to correct the CDA request.</description>
        <label>Requestor Reply Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOPs_Provided__c</fullName>
        <description>Will standard Operating procedures be provided to the Recipient?</description>
        <label>SOPs Provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Contact_Email_Address__c</fullName>
        <label>Site Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_First_Name__c</fullName>
        <label>Site Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Last_Name__c</fullName>
        <label>Site Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Consent_to_Disclose_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sponsor Consent to Disclose Information to Auditor</description>
        <inlineHelpText>Consent from the sponsor to disclose their information is required for an audit CDA. You will be required to attach the sponsor&apos;s consent.</inlineHelpText>
        <label>Sponsor Consent to Disclose Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsor_Consent_to_Disclose__c</fullName>
        <inlineHelpText>Indicate if consent has been received from the sponsor to disclose sponsor’s information. If yes, the approval document must be uploaded/attached upon submission.</inlineHelpText>
        <label>Sponsor Consent to Disclose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_Address__c</fullName>
        <formula>Sponsor_Legal_Entity__r.Complete_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Address corresponding to the sponsor legal entity.</inlineHelpText>
        <label>Sponsor Legal Entity Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_City_Other__c</fullName>
        <description>Sponsor Legal Entity City</description>
        <label>Sponsor Legal Entity City Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_Country_Other_PL__c</fullName>
        <description>Sponsor&apos;s Country</description>
        <label>Sponsor Legal Entity Country Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_Country_Other__c</fullName>
        <description>Sponsor Legal Entity Country Other</description>
        <label>Sponsor Legal Entity Country Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_Email__c</fullName>
        <description>This is used in Email Templates</description>
        <formula>IF(  ISNULL(Sponsor_Legal_Entity__r.Name) || Sponsor_Legal_Entity__r.Name == &apos;&apos; ,  Sponsor_Legal_Entity_Name_Other__c , Sponsor_Legal_Entity__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sponsor Legal Entity Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_Name_Other__c</fullName>
        <inlineHelpText>Sponsor&apos;s legal entity name</inlineHelpText>
        <label>Sponsor Legal Entity Name Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sponsor&apos;s legal entity name</inlineHelpText>
        <label>Sponsor Legal Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CDA Requests (Sponsor Legal Entity Name)</relationshipLabel>
        <relationshipName>CDA_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_State_Other_PL__c</fullName>
        <description>Sponsor&apos;s State</description>
        <label>Sponsor Legal Entity State Other</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sponsor_Legal_Entity_Country_Other_PL__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abia</fullName>
                </value>
                <value>
                    <fullName>Abruzzit</fullName>
                </value>
                <value>
                    <fullName>Abyei Area</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Adamawa</fullName>
                </value>
                <value>
                    <fullName>Adrar</fullName>
                </value>
                <value>
                    <fullName>Afar Regional State</fullName>
                </value>
                <value>
                    <fullName>Agadez</fullName>
                </value>
                <value>
                    <fullName>Água Grande</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Ahafo Region</fullName>
                </value>
                <value>
                    <fullName>Ahal Region</fullName>
                </value>
                <value>
                    <fullName>Aichi</fullName>
                </value>
                <value>
                    <fullName>Aimeliik</fullName>
                </value>
                <value>
                    <fullName>Airai</fullName>
                </value>
                <value>
                    <fullName>Akita</fullName>
                </value>
                <value>
                    <fullName>Akwa Ibom</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Amapá</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>Amhara Regional State</fullName>
                </value>
                <value>
                    <fullName>Anambra</fullName>
                </value>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Andra Pradesh</fullName>
                    <isActive>true</isActive>
                    <label>Andra Pradesh</label>
                </value>
                <value>
                    <fullName>Angaur</fullName>
                </value>
                <value>
                    <fullName>Anhui</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_State_Other__c</fullName>
        <description>Sponsor Legal Entity State Other</description>
        <label>Sponsor Legal Entity State Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_Street_Other__c</fullName>
        <label>Sponsor Legal Entity Street Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity_ZipCode_Other__c</fullName>
        <description>Sponsor Legal Entity ZipCode Other</description>
        <label>Sponsor Legal Entity ZipCode Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sponsor Legal Entity</description>
        <inlineHelpText>Provide the study sponsor’s company name</inlineHelpText>
        <label>Sponsor Legal Entity</label>
        <referenceTo>CDA_Account__c</referenceTo>
        <relationshipLabel>CDA Requests (Sponsor Legal Entity)</relationshipLabel>
        <relationshipName>CDA_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_information_to_be_disclosed_to__c</fullName>
        <description>Sponsor information to be disclosed to  competitor</description>
        <inlineHelpText>Description of the Sponsor information that will be disclosed to the Recipient</inlineHelpText>
        <label>Sponsor information to be disclosed to  </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Completion_Date__c</fullName>
        <description>Derived by system and not displayed to front end use</description>
        <label>Status Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Start_Date__c</fullName>
        <description>Derived by system.  Each Status change and the date to and from should be captured for each status change.</description>
        <label>Status Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>these are the statuses for CDA request.</description>
        <inlineHelpText>Current Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Draft</fullName>
                </value>
                <value>
                    <fullName>Acquiring Internal IQVIA Signature</fullName>
                </value>
                <value>
                    <fullName>Awaiting Requestor Submission</fullName>
                </value>
                <value>
                    <fullName>Awaiting GLD Competitor Approval</fullName>
                </value>
                <value>
                    <fullName>In Review by IQVIA</fullName>
                </value>
                <value>
                    <fullName>Language Review</fullName>
                </value>
                <value>
                    <fullName>Submitted for Processing</fullName>
                </value>
                <value>
                    <fullName>Awaiting OGC Competitor Approval</fullName>
                </value>
                <value>
                    <fullName>Validating Recipient Provided Document</fullName>
                </value>
                <value>
                    <fullName>Sent for Recipient Review</fullName>
                </value>
                <value>
                    <fullName>Sent for Recipient Signature</fullName>
                </value>
                <value>
                    <fullName>Returned to Requestor</fullName>
                </value>
                <value>
                    <fullName>Signature Request Denied</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Contract Executed</fullName>
                </value>
                <value>
                    <fullName>Disclosure Period Ended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Systems_To_Be_Accessed__c</fullName>
        <description>Describe the system(s) in which access is required?</description>
        <inlineHelpText>Provide a description of the system(s) to which the Recipient requires access.</inlineHelpText>
        <label>Systems To Be Accessed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Template_footer_version__c</fullName>
        <description>created under template CR-11242</description>
        <formula>&quot;April2018&quot;</formula>
        <label>Template footer version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Date</label>
        <type>Date</type>
    </fields>
</CustomObject>